implementacion pc2